--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ a#github_link {
             Skills: C/C++, GLSL, OpenGL, C#, Unity, Unreal Engine 5, <br> Linux, Python, Java, MATLAB, SQL, HTML, CSS, Javascript, KinectV2
         </p>
         <p>Email: markkuo1999@gmail.com <br> Phone: +12132841452</p>
-        <a href="C:/Users/markk/Downloads/PersonalWebsite/CV2.pdf" download="CV2.pdf">Download Link to My Graphics Related Work CV <br></a>
+        <a href="CV2.pdf" download="CV2.pdf">Download Link to My Graphics Related Work CV <br></a>
         <a href="C:/Users/markk/Downloads/PersonalWebsite/CV1.pdf" download="CV1.pdf">Download Link to My General Computer Science CV</a>
     </div>
     <div>
