--- a/index.html
+++ b/index.html
@@ -86,22 +86,22 @@ a#github_link {
         </p>
         <p>Email: markkuo1999@gmail.com <br> Phone: +12132841452</p>
         <a href="CV2.pdf" download="CV2.pdf">Download Link to My Graphics Related Work CV <br></a>
-        <a href="C:/Users/markk/Downloads/PersonalWebsite/CV1.pdf" download="CV1.pdf">Download Link to My General Computer Science CV</a>
+        <a href="CV1.pdf" download="CV1.pdf">Download Link to My General Computer Science CV</a>
     </div>
     <div>
-        <img id= "SelfPhoto" src="C:/Users/markk/Downloads/PersonalWebsite/MyPhoto.jpg">
+        <img id= "SelfPhoto" src="MyPhoto.jpg">
     </div>
     <div>
-        <img id="Taiwan" src="C:/Users/markk/Downloads/PersonalWebsite/Taiwan.jpg">
+        <img id="Taiwan" src="Taiwan.jpg">
     </div>
-        <img id="USC" src="C:/Users/markk/Downloads/PersonalWebsite/USC.jpg">
+        <img id="USC" src="USC.jpg">
     </div>
     <div>
     	<a id="linkedin_link" href="https://www.linkedin.com/in/zongyingkuo0616/" target="_blank">
-  		<img  style= "width: 50px;" src="C:/Users/markk/Downloads/PersonalWebsite/linkedin.png">
+  		<img  style= "width: 50px;" src="linkedin.png">
         </a>
         <a id="github_link" href="https://github.com/markkuo1999" target="_blank">
-            <img  style= "width: 90px;" src="C:/Users/markk/Downloads/PersonalWebsite/GitHub-logo.png">
+            <img  style= "width: 90px;" src="GitHub-logo.png">
         </a>
     </div>
     <div id="MyProject">
@@ -109,11 +109,11 @@ a#github_link {
             My Projects
         </p>
         <p id="lists" style="font-size: 20px; color: white; padding-top: 50px; padding-left: 45px;">
-            <a href="C:/Users/markk/Downloads/PersonalWebsite/ComputerGraphics.html">Computer Graphics</a> <br> <br> <br>
-            <a href="C:/Users/markk/Downloads/PersonalWebsite/ComputerAnimation.html">Computer Animation</a> <br> <br> <br>
-            <a href="C:/Users/markk/Downloads/PersonalWebsite/Unity.html">Unity</a> <br> <br> <br>
-            <a href="C:/Users/markk/Downloads/PersonalWebsite/KinectV2.html">KinectV2</a> <br> <br> <br>
-            <a href="C:/Users/markk/Downloads/PersonalWebsite/Hexagon.html">Internship Projects</a> <br> <br> <br>
+            <a href="ComputerGraphics.html">Computer Graphics</a> <br> <br> <br>
+            <a href="ComputerAnimation.html">Computer Animation</a> <br> <br> <br>
+            <a href="Unity.html">Unity</a> <br> <br> <br>
+            <a href="KinectV2.html">KinectV2</a> <br> <br> <br>
+            <a href="Hexagon.html">Internship Projects</a> <br> <br> <br>
             <a href="">Other</a> <br> <br> <br>
         </p>
     </div>
