--- a/ComputerGraphics.html
+++ b/ComputerGraphics.html
@@ -84,7 +84,7 @@
     </div>
     <div id="Meshes">
         3D Model Rendering
-        <a style="font-size: 20px;" href="C:/Users/markk/Downloads/PersonalWebsite/3DMeshes/3D_Graphics_Rendering_With_Scaling_Rotating_Translating.zip"
+        <a style="font-size: 20px;" href="3DMeshes/3D_Graphics_Rendering_With_Scaling_Rotating_Translating.zip"
            download="3D_Graphics_Rendering_With_Scaling_Rotating_Translating.zip">Download Link<br></a>
     </div>
     <div id="MeshesContent">
@@ -99,17 +99,17 @@
         Programming Languages: C++, OpenGL <br /> <br />
         <div id="3DMeshes_img_container">
             <span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</span>
-            <img style="width:300px;" src="C:/Users/markk/Downloads/PersonalWebsite/3DMeshes/Teapot.JPG">
-            <img style="width:300px; height:222px" src="C:/Users/markk/Downloads/PersonalWebsite/3DMeshes/Chair.JPG">
+            <img style="width:300px;" src="3DMeshes/Teapot.JPG">
+            <img style="width:300px; height:222px" src="3DMeshes/Chair.JPG">
             <br />
             <span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</span>
-            <img style="width:300px; height:222px" src="C:/Users/markk/Downloads/PersonalWebsite/3DMeshes/TeapotBig.JPG">
-            <img style="width:300px; height:222px" src="C:/Users/markk/Downloads/PersonalWebsite/3DMeshes/ChairBack.JPG">
+            <img style="width:300px; height:222px" src="3DMeshes/TeapotBig.JPG">
+            <img style="width:300px; height:222px" src="3DMeshes/ChairBack.JPG">
         </div>
     </div>
     <div id="HeightField">
         Height Field Construction by Grayscale Level
-        <a style="font-size: 20px;" href="C:/Users/markk/Downloads/PersonalWebsite/HeightField/Heightfield.zip"
+        <a style="font-size: 20px;" href="HeightField/Heightfield.zip"
            download="Heightfield.zip">Download Link<br></a>
     </div>
     <div id="HeightFieldContent">
@@ -118,18 +118,18 @@
         You can also select the render mode(points, lines, triangles)<br />
         Programming Languages: C++, OpenGL<br /><br />
         <span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</span>
-        <img style="width:300px; height:222px" src="C:/Users/markk/Downloads/PersonalWebsite/HeightField/OhioPyle-256-HF.jpg">
-        <img style="width:300px; height:222px" src="C:/Users/markk/Downloads/PersonalWebsite/HeightField/SantaMonicaMountains-256-HF.jpg">
+        <img style="width:300px; height:222px" src="HeightField/OhioPyle-256-HF.jpg">
+        <img style="width:300px; height:222px" src="HeightField/SantaMonicaMountains-256-HF.jpg">
         <br />
         <span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</span>
         <video controls style="width: 600px;">
-            <source src="C:/Users/markk/Downloads/PersonalWebsite/HeightField/ZongYingKuo_Assignment1Animation.mp4" type="video/mp4">
+            <source src="HeightField/ZongYingKuo_Assignment1Animation.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
     <div id="RollerCoasterSimulator">
         Roller Coaster Simulator
-        <a style="font-size: 20px;" href="C:/Users/markk/Downloads/PersonalWebsite/RollerCoasterSimulator/RollerCoaster.zip"
+        <a style="font-size: 20px;" href="RollerCoasterSimulator/RollerCoaster.zip"
            download="RollerCoaster.zip">
             Download Link<br>
         </a>
@@ -140,17 +140,17 @@
     The roller coaster speed follows the physics law<br />
     Programming Languages: C++, OpenGL<br /><br />
     <span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</span>
-    <img style="width:500px; height:300px" src="C:/Users/markk/Downloads/PersonalWebsite/RollerCoasterSimulator/TrackImage.png">
+    <img style="width:500px; height:300px" src="RollerCoasterSimulator/TrackImage.png">
     <br />
     <span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</span>
     <video controls style="width: 600px;">
-        <source src="C:/Users/markk/Downloads/PersonalWebsite/RollerCoasterSimulator/CoasterVideo.mp4" type="video/mp4">
+        <source src="RollerCoasterSimulator/CoasterVideo.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 </div>
     <div id="RayCaster">
         Ray Caster 
-        <a style="font-size: 20px;" href="C:/Users/markk/Downloads/PersonalWebsite/RollerCoasterSimulator/RollerCoaster.zip"
+        <a style="font-size: 20px;" href="RollerCoasterSimulator/RollerCoaster.zip"
            download="RollerCoaster.zip">
             Download Link<br>
         </a>
@@ -160,10 +160,10 @@
         Shot light rays to the view plane and calculated color for each pixel<br />
         Programming Languages: C++, OpenGL<br /><br />
         <span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</span>
-        <img style="width:400px; height:300px" src="C:/Users/markk/Downloads/PersonalWebsite/RayCaster/sphere&tri.jpg">
+        <img style="width:400px; height:300px" src="RayCaster/sphere&tri.jpg">
         <br />
         <span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</span>
-        <img style="width:400px; height:300px" src="C:/Users/markk/Downloads/PersonalWebsite/RayCaster/table.jpg">
+        <img style="width:400px; height:300px" src="RayCaster/table.jpg">
         <br />
     </div>
 </body>
