--- a/ComputerAnimation.html
+++ b/ComputerAnimation.html
@@ -71,7 +71,7 @@
     </div>
     <div id="JelloCube">
         JelloCube
-        <a style="font-size: 20px;" href="C:/Users/markk/Downloads/PersonalWebsite/JelloCube/JelloCube.zip"
+        <a style="font-size: 20px;" href="JelloCube/JelloCube.zip"
            download="JelloCube.zip">Download Link<br></a>
     </div>
     <div id="JelloCubeContent">
@@ -80,13 +80,13 @@
     Programming Languages: C++, OpenGL <br /> <br />
     <span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</span>
     <video controls style="width: 600px;">
-        <source src="C:/Users/markk/Downloads/PersonalWebsite/JelloCube/JelloCubeAnimation.mp4" type="video/mp4">
+        <source src="JelloCube/JelloCubeAnimation.mp4" type="video/mp4">
     </video>
 </div>
     <div id="MotionCaptureInterpolation">
         Motion Capture Interpolation
-        <a style="font-size: 20px;" href="C:/Users/markk/Downloads/PersonalWebsite/MotionCaptureInterpolation/MotionCaptureInterpolation.zip"
-           download="JelloCube.zip">Download Link<br></a>
+        <a style="font-size: 20px;" href="MotionCaptureInterpolation/MotionCaptureInterpolation.zip"
+           download="MotionCaptureInterpolation.zip">Download Link<br></a>
     </div>
     <div id="MotionCaptureInterpolationContent">
         Implemented Bezier Spherical Linear <strong>(SLERP)</strong> interpolation for <strong>quaternions</strong> to <br />
@@ -96,12 +96,12 @@
         Programming Languages: C++, OpenGL <br /> <br />
     <span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</span>
     <video controls style="width: 600px;">
-        <source src="C:/Users/markk/Downloads/PersonalWebsite/MotionCaptureInterpolation/MocapVideo.mp4" type="video/mp4">
+        <source src="MotionCaptureInterpolation/MocapVideo.mp4" type="video/mp4">
     </video>
 </div>
     <div id="CharacterDeformation">
         3D Character Deformation
-        <a style="font-size: 20px;" href="C:/Users/markk/Downloads/PersonalWebsite/CharacterDeformation/CharacterDeformation.zip"
+        <a style="font-size: 20px;" href="CharacterDeformation/CharacterDeformation.zip"
            download="JelloCube.zip">Download Link<br></a>
     </div>
     <div id="CharacterDeformationContent">
@@ -110,7 +110,7 @@
         Programming Languages: C++, OpenGL <br /> <br />
     <span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</span>
     <video controls style="width: 600px;">
-        <source src="C:/Users/markk/Downloads/PersonalWebsite/CharacterDeformation/DeformVideo.mp4" type="video/mp4">
+        <source src="CharacterDeformation/DeformVideo.mp4" type="video/mp4">
     </video>
 </div>
 
