--- a/KinectV2.html
+++ b/KinectV2.html
@@ -42,7 +42,7 @@
     </div>
     <div id="VirtualViolin">
         Virtual Violin
-        <a style="font-size: 20px;" href="C:/Users/markk/Downloads/PersonalWebsite/KinectV2/Kinect-V2-Virtual-Violin-master.zip"
+        <a style="font-size: 20px;" href="KinectV2/Kinect-V2-Virtual-Violin-master.zip"
            download="Kinect-V2-Virtual-Violin-master.zip">Download Link<br></a>
     </div>
     <div id="VirtualViolinContent">
@@ -50,12 +50,12 @@
         Programming Languages: C#, KinectV2<br /> <br />
         <span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</span>
         <video controls style="width: 600px;">
-            <source src="C:/Users/markk/Downloads/PersonalWebsite/KinectV2/Interface.mp4" type="video/mp4">
+            <source src="KinectV2/Interface.mp4" type="video/mp4">
         </video>
         <br />
         <span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</span>
         <video controls style="width: 600px;">
-            <source src="C:/Users/markk/Downloads/PersonalWebsite/KinectV2/UserDemo.mp4" type="video/mp4">
+            <source src="KinectV2/UserDemo.mp4" type="video/mp4">
         </video>
 </body>
 </head>
