--- a/Unity.html
+++ b/Unity.html
@@ -42,7 +42,7 @@
     </div>
     <div id="VirtualConcertStage">
         Virtual Concert Stage With 3D Avatar Projection
-        <a style="font-size: 20px;" href="C:/Users/markk/Downloads/PersonalWebsite/VirtualConcertStage/3D-Character-Projection-using-Kinect-V2-and-Unity3D-master.zip"
+        <a style="font-size: 20px;" href="VirtualConcertStage/3D-Character-Projection-using-Kinect-V2-and-Unity3D-master.zip"
            download="3D-Character-Projection-using-Kinect-V2-and-Unity3D-master.zip">Download Link<br></a>
     </div>
     <div id="VirtualConcertStageContent">
@@ -51,7 +51,7 @@
         Programming Languages: C#, Unity, KinectV2<br /> <br />
         <span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</span>
         <video controls style="width: 600px;">
-            <source src="C:/Users/markk/Downloads/PersonalWebsite/VirtualConcertStage/ConcertVideo.mp4" type="video/mp4">
+            <source src="VirtualConcertStage/ConcertVideo.mp4" type="video/mp4">
         </video>
 </body>
 </head>
