--- a/Hexagon.html
+++ b/Hexagon.html
@@ -66,16 +66,16 @@
     </div>
     <div id="HexagonContent">
         Advanced Visualization Intern (Remote), Hexagon Manufacturing Intelligence, United States <br />
-        <p style="text-align: center;">May. 2023 – Aug. 2023</p>
+        <p style="text-align: center;">May. 2023 ~ Aug. 2023</p>
     </div>
     <div id="HexagonContent2">
         Helped with developing visualization applications and participated in the discussion and development of a new <strong>proof-of-concept product</strong> <br /> that
-        will test the market validity of the concept of bringing “<strong>digital twins</strong> to life in the <strong>manufacturing metaverse</strong>”:<br />
+        will test the market validity of the concept of bringing <strong>digital twins</strong> to life in the <strong>manufacturing metaverse</strong>:<br />
     </div>
     <div id="RobotarmAnimation">
         <strong>Robot Arm Animation</strong><br />
         Made a <strong>keyframe animation</strong> of a robot arm digital twin by interpolating between the joint angle values in each keyframe,
-        the animation <br />was presented in Hexagon’s private conference<br />
+        the animation <br />was presented in Hexagon's private conference<br />
         Programming Languages: Javascript, Typescript<br />
     </div>
     <div id="VMT">
